# xonsh-language-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/xonsh_lsp/: __init__.py  completions.py  definition.py  diagnostics.py  hover.py  inlay_hints.py  jedi_backend.py  lsp_proxy_backend.py  parser.py  preprocessing.py  python_backend.py  python_backend_common.py  python_delegate.py  server.py  xonsh_builtins.py  xonsh_types.py
tests/: __init__.py  test_completions.py  test_definition.py  test_diagnostics.py  test_document_symbols.py  test_folding_ranges.py  test_hover.py  test_inlay_hints.py  test_jedi_backend.py  test_lsp_proxy_backend.py  test_parser.py  test_parser_semantic_tokens.py  test_preprocessing.py  test_python_delegate.py  test_regression.py  test_rename.py  test_server.py  test_server_rename.py  test_typed_stub.py  test_xonsh_types.py
