[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xonsh-lsp"
version = "0.1.7"
description = "Language Server Protocol implementation for xonsh"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mohammed Elwardi Fadeli", email = "elwardifadeli@gmail.com" }
]
keywords = [
    "xonsh",
    "lsp",
    "language-server",
    "editor",
    "ide",
    "python",
    "shell",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    "pygls>=1.3.0",
    "lsprotocol>=2023.0.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-xonsh>=0.1.7",
    "cattrs>=23.0.0",
]

[project.optional-dependencies]
jedi = ["jedi>=0.19.0"]
all = ["jedi>=0.19.0"]
dev = [
    "jedi>=0.19.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
xonsh-lsp = "xonsh_lsp.server:main"

[project.urls]
Homepage = "https://github.com/FoamScience/xonsh-language-server"
Repository = "https://github.com/FoamScience/xonsh-language-server"
Issues = "https://github.com/FoamScience/xonsh-language-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/xonsh_lsp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
